--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         tools:targetApi="31">
         <activity
             android:name="com.denisbovsunivskyi.animetier.presentation.ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
