--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,5 +93,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+    implementation "com.andkulikov:transitionseverywhere:2.1.0"
 
 }
