--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name="com.denisbovsunivskyi.animetier.presentation.ui.MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustPan|stateHidden"
+            android:windowSoftInputMode="adjustResize"
 
             >
             <intent-filter>
