add login logic, change navigation graph, ade BaseActivity.kt and BaseNavigationActivity.kt class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 android {
-    namespace 'com.example.animetier'
+    namespace 'com.denisbovsunivskyi.animetier'
     compileSdk 33
 
     defaultConfig {
