--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+
+        buildConfigField("String","BASE_URL",BASE_URL)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -87,6 +89,11 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+
+    //Paging 3
+    implementation("androidx.paging:paging-common:3.1.1")
+    implementation("androidx.paging:paging-runtime-ktx:3.1.1")
+
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
