--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 BASE_URL="https://kitsu.io/api/edge/"
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
