--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.0'
     kapt 'com.github.bumptech.glide:compiler:4.15.0'
     //Material
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
 
     //room
     implementation "androidx.room:room-runtime:$room_version"
@@ -110,5 +110,7 @@ dependencies {
     //Swipe to refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
 
+    //Leak Canary Debug
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
 }
